# plugin-django

./: CHANGELOG.md  README.md  pyproject.toml
krynox_captcha/: __init__.py  client.py  fields.py  widgets.py
